--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@ return pixel;
 <canvas width="512" height="512" id="canvas" style="border: 1px solid white; background-color: black;"></canvas>
 <br>
 <button onclick="reload()">Reload</button>
+<input type="number" placeholder="Width" id="width" min="1" max="4096">
+<input type="number" placeholder="Height" id="height" min="1" max="4096">
+<input type="number" placeholder="Scale" id="scale" min="0.01" max="200">
+<button onclick="updateSize($('width').value, $('height').value, $('scale').value)">Update</button>
 <h1>Made by Hikne</h1>
 </body>
 <script src="main.js"></script>
