--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ return pixel;
 <input type="number" placeholder="Width" id="width" min="1" max="4096">
 <input type="number" placeholder="Height" id="height" min="1" max="4096">
 <input type="number" placeholder="Scale" id="scale" min="0.01" max="200">
-<button onclick="updateSize($('width').value, $('height').value, $('scale').value)">Update</button>
+<button onclick="updateSize()">Update</button>
 <h1>Made by Hikne</h1>
 </body>
 <script src="main.js"></script>
