--- a/index.html
+++ b/index.html
@@ -7,11 +7,24 @@ return pixel;
 </textarea>
 <canvas width="512" height="512" id="canvas" style="border: 1px solid white; background-color: black;"></canvas>
 <br>
+<h3>Rendering</h3>
 <button onclick="reload()">Reload</button>
+<br>
+<h3>Size</h3>
 <input type="number" placeholder="Width" id="width" min="1" max="4096">
 <input type="number" placeholder="Height" id="height" min="1" max="4096">
 <input type="number" placeholder="Scale" id="scale" min="0.01" max="200">
 <button onclick="updateSize()">Update</button>
+<br>
+<h3>Tick</h3>
+<input type="number" min="1" max="1000000000" placeholder="Tick" id="tick">
+<button onclick="setTick(Number($('tick').value))">Update</button>
+<button onclick="setTick(0)">Set to 0</button>
+<br>
+<h3>Animation</h3>
+<input type="number" min="0.1" max="60" placeholder="FPS" id="fps" value="10">
+<button onclick="startAnimation(Number($('fps').value))">Start</button>
+<button onclick="stopAnimation()">Stop</button>
 <h1>Made by Hikne</h1>
 </body>
 <script src="./main.js"></script>
